--- a/src/pages/fr/agenda.astro
+++ b/src/pages/fr/agenda.astro
@@ -77,5 +77,5 @@ const schema = {
         </section> -->
     </section>
   </main>
-  <AgendaComponent breaks={breaks} />
+  <!-- <AgendaComponent breaks={breaks} /> -->
 </Layout>
