--- a/src/pages/fr/speaker/[slug].astro
+++ b/src/pages/fr/speaker/[slug].astro
@@ -3,7 +3,7 @@ import { getCollection } from "astro:content";
 import HeaderHero from "../../../components/HeaderHero.astro";
 import { SITE_TITLE } from "../../../consts";
 import Layout from "../../../layouts/Layout.astro";
-import type { CollectionEntry } from 'astro:content';
+import type { CollectionEntry } from "astro:content";
 
 export async function getStaticPaths() {
   const speakers = await getCollection("speaker");
@@ -13,8 +13,9 @@ export async function getStaticPaths() {
 }
 
 const slug = Astro.params.slug;
-const speaker = (await getCollection("speaker", (speaker) => speaker.id === slug))
-  .map((speaker: CollectionEntry<"speaker">) => speaker.data)[0];
+const speaker = (
+  await getCollection("speaker", (speaker) => speaker.id === slug)
+).map((speaker: CollectionEntry<"speaker">) => speaker.data)[0];
 
 const schema = {
   "@context": "https://schema.org",
@@ -34,9 +35,21 @@ const schema = {
 <Layout title={SITE_TITLE} schema={schema}>
   <main>
     <HeaderHero>
+      {
+        speaker.image ? (
+          <img
+            src={speaker.image}
+            alt={speaker.name}
+            class="rounded-full w-32 h-32"
+          />
+        ) : (
+          ""
+        )
+      }
       <span slot="title">{speaker.name}</span>
-      <span slot="description">{speaker.description}</span>
     </HeaderHero>
-    <section class="max-w-screen-lg m-auto px-8"></section>
+    <section class="max-w-screen-lg m-auto px-8">
+      <span slot="description">{speaker.description}</span>
+    </section>
   </main>
-</Layout> 
+</Layout>
