--- a/src/components/Agenda.astro
+++ b/src/components/Agenda.astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection } from "astro:content";
+import { getRelativeLocaleUrl } from 'astro:i18n';
 
 const { breaks } = Astro.props;
 
@@ -15,8 +16,6 @@ const displayAsHour = (hour: string) => {
     hour.slice(-2)
   );
 };
----
-
 ---
 
     <ul
@@ -57,7 +56,7 @@ const displayAsHour = (hour: string) => {
                     <img src="/icons/united_kingdom_square_icon_64.png" style="height: 24px" alt="English">
                     )
                   )}
-                  <a href={'track/' + track.slug} class="text-2xl font-bold text-primary">{track.data.name}</a>
+                  <a href={getRelativeLocaleUrl(Astro.currentLocale!, '/track/' + track.slug)} class="text-2xl font-bold text-primary">{track.data.name}</a>
                 </div>
                 <p class="mt-2 text-gray-300">{track.data.description}</p>
               ) : (
