--- a/src/pages/en/track/[slug].astro
+++ b/src/pages/en/track/[slug].astro
@@ -1,8 +1,8 @@
 ---
 import { getCollection } from "astro:content";
-import HeaderHero from "../../../components/HeaderHero.astro";
 import { SITE_DOMAIN, SITE_TITLE } from "../../../consts";
 import Layout from "../../../layouts/Layout.astro";
+import Track from "../../../components/Track.astro";
 
 export async function getStaticPaths() {
   const tracks = await getCollection("track");
@@ -15,7 +15,6 @@ const slug = Astro.params.slug;
 const track = (await getCollection("track", (track) => track.id === slug)).map(
   (track) => track.data
 )[0];
-console.log(track);
 
 const schema = {
   "@context": "https://schema.org",
@@ -34,10 +33,6 @@ const schema = {
 
 <Layout title={SITE_TITLE} schema={schema}>
   <main>
-    <HeaderHero>
-      <span slot="title">{track.name}</span>
-      <span slot="description">{track.description}</span>
-    </HeaderHero>
-    <section class="max-w-screen-lg m-auto px-8"></section>
+    <Track track={track} />
   </main>
 </Layout>
