--- a/src/pages/fr/speakers.astro
+++ b/src/pages/fr/speakers.astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection } from "astro:content";
+import { getRelativeLocaleUrl } from "astro:i18n";
 import Layout from "../../layouts/Layout.astro";
 import HeaderHero from "../../components/HeaderHero.astro";
 import type { CollectionEntry } from "astro:content";
@@ -61,7 +62,12 @@ const schema = {
         {
           speakers.map((speaker) => (
             <li>
-              <a href={"speaker/" + speaker.slug}>
+              <a
+                href={getRelativeLocaleUrl(
+                  Astro.currentLocale!,
+                  "/speaker/" + speaker.slug
+                )}
+              >
                 <Speaker speaker={speaker.data} />
               </a>
             </li>
