feat: add date in header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -29,6 +29,8 @@ const locale = Astro.currentLocale;
       <a class="btn btn-ghost text-2xl text-white title-font" href={getRelativeLocaleUrl(Astro.currentLocale!, '/')}>
         NG BAGUETTE CONF
       </a>
+      <div class="divider divider-horizontal py-2"></div>
+      <div>May 24, 2025</div>
     </div>
 
     <div class="flex-none">
