--- a/src/pages/fr/speaker/[slug].astro
+++ b/src/pages/fr/speaker/[slug].astro
@@ -14,7 +14,7 @@ export async function getStaticPaths() {
 
 const slug = Astro.params.slug;
 const speaker = (
-  await getCollection("speaker", (speaker) => speaker.id === slug)
+  await getCollection("speaker", (speaker) => speaker.slug === slug)
 ).map((speaker: CollectionEntry<"speaker">) => speaker.data)[0];
 
 const schema = {
