--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -41,6 +41,21 @@ import Layout from "../../layouts/Layout.astro";
                   <p>Limited availability</p>
                   <span class="text-3xl font-bold">€25</span>
                   <p class="text-primary">Unlocked on March 10th</p>
+                  <button class="btn btn-primary" onclick="document.getElementById('ticket-modal').showModal()">Get your ticket</button>
+                  <dialog id="ticket-modal" class="modal">
+                    <div class="modal-box">
+                      <h3 class="font-bold text-lg">Important Note</h3>
+                      <p class="py-4">To reduce costs and simplify the first edition, we are using a free French platform dedicated to non profit events.</p>
+                      <p>The ticket registration page is in French.</p>
+                      <p>If your French vocabulary is limited to "Oui Oui Baguette", you may want to use Google Translate there to complete your purchase!</p>
+                      <div class="modal-action">
+                        <form class="flex gap-4" method="dialog">
+                          <a href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank" class="btn btn-primary">Get your ticket</a>
+                          <button class="btn">Close</button>
+                        </form>
+                      </div>
+                    </div>
+                  </dialog>
                 </div>
               </li>
               <li
