--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -40,7 +40,11 @@ import Layout from "../../layouts/Layout.astro";
                   <h3 class="card-title text-2xl text-center">Billet blind</h3>
                   <p>Quantité limitée</p>
                   <span class="text-3xl font-bold">25 €</span>
-                  <p class="text-primary">Disponible le 10 mars</p>
+                  <a
+                    class="btn btn-primary"
+                    href="https://www.helloasso.com/associations/angular-nexus/evenements/ng-baguette-conf-2025"
+                    target="_blank">Get your ticket</a
+                  >
                 </div>
               </li>
               <li
