--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,6 @@ import Layout from "../layouts/Layout.astro";
                   <h3 class="card-title text-2xl text-center">Blind Ticket</h3>
                   <p>Limited availability</p>
                   <span class="text-3xl font-bold">€25</span>
-                  <p class="text-primary">Unlocked on March 10th</p>
                   <button class="btn btn-primary" onclick="document.getElementById('ticket-modal').showModal()">Get your ticket</button>
                   <dialog id="ticket-modal" class="modal">
                     <div class="modal-box">
@@ -50,7 +49,7 @@ import Layout from "../layouts/Layout.astro";
                       <p>If your French vocabulary is limited to "Oui Oui Baguette", you may want to use Google Translate there to complete your purchase!</p>
                       <div class="modal-action">
                         <form class="flex gap-4" method="dialog">
-                          <a href="https://conference-hall.io/ng-baguette-conf-2025" target="_blank" class="btn btn-primary">Get your ticket</a>
+                          <a href="https://www.helloasso.com/associations/angular-nexus/evenements/ng-baguette-conf-2025" target="_blank" class="btn btn-primary">Get your ticket</a>
                           <button class="btn">Close</button>
                         </form>
                       </div>
