--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -43,7 +43,7 @@ import Layout from "../../layouts/Layout.astro";
                   <a
                     class="btn btn-primary"
                     href="https://www.helloasso.com/associations/angular-nexus/evenements/ng-baguette-conf-2025"
-                    target="_blank">Get your ticket</a
+                    target="_blank">Obtenir votre billet</a
                   >
                 </div>
               </li>
