--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -32,7 +32,7 @@ import Layout from "../../layouts/Layout.astro";
             <h2 class="text-2xl md:text-3xl font-bold mb-8">
               Billets
             </h2>
-            <ul class="flex gap-4 items-center">
+            <ul class="flex gap-4 items-stretch">
               <li
                 class="flex-1 card bg-base-200 shadow-xl border-2 border-primary"
               >
