--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -45,6 +45,7 @@ import Layout from "../../layouts/Layout.astro";
                     href="https://www.helloasso.com/associations/angular-nexus/evenements/ng-baguette-conf-2025"
                     target="_blank">Obtenir votre billet</a
                   >
+                  <p class="text-sm mt-2">25 billets disponibles</p>
                 </div>
               </li>
               <li
