--- a/src/pages/en/speaker/[slug].astro
+++ b/src/pages/en/speaker/[slug].astro
@@ -3,6 +3,7 @@ import { getCollection } from "astro:content";
 import HeaderHero from "../../../components/HeaderHero.astro";
 import { SITE_DOMAIN, SITE_TITLE } from "../../../consts";
 import Layout from "../../../layouts/Layout.astro";
+import Tracks from "../../../components/Tracks.astro";
 
 export async function getStaticPaths() {
   const speakers = await getCollection("speaker");
@@ -45,6 +46,8 @@ const schema = {
       <span slot="title">{speaker.name}</span>
       <span slot="description">{speaker.description}</span>
     </HeaderHero>
-    <section class="max-w-screen-lg m-auto px-8"></section>
+    <section class="max-w-screen-lg m-auto px-8">
+      <Tracks speakerSlug={slug} />
+    </section>
   </main>
 </Layout>
