--- a/src/pages/fr/speakers.astro
+++ b/src/pages/fr/speakers.astro
@@ -39,7 +39,7 @@ const schema = {
       <span slot="title">Orateurs</span>
     </HeaderHero>
     <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
-      <section class="flex flex-col items-center gap-4">
+      <!-- <section class="flex flex-col items-center gap-4">
         <p class="text-center text-2xl font-bold">
           Notre appel à speakers est ouvert jusqu'au 14 mars 2025
         </p>
@@ -48,13 +48,13 @@ const schema = {
           target="_blank"
           class="btn btn-primary">Soumettez vos propositions</a
         >
-      </section>
-
-      <!-- <section class="flex flex-col items-center gap-4">
-        <p class="text-center text-2xl font-bold">
-          Notre appel à speakers est fermé. Programme à venir !
-        </p>
       </section> -->
+
+      <section class="flex flex-col items-center gap-4">
+        <p class="text-center text-2xl font-bold">
+          Notre appel à speakers est fermé. Plus d'information à venir !
+        </p>
+      </section>
 
       <!-- <ul
         class="flex flex-wrap justify-center gap-x-20 gap-y-8 mt-12 max-w-screen-lg m-auto"
