--- a/src/pages/en/speakers.astro
+++ b/src/pages/en/speakers.astro
@@ -39,7 +39,7 @@ const schema = {
       <span slot="title">Speakers</span>
     </HeaderHero>
     <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
-      <section class="flex flex-col items-center gap-4">
+      <!-- <section class="flex flex-col items-center gap-4">
         <p class="text-center text-2xl font-bold">
           Our call for speakers is open until March 14th
         </p>
@@ -48,12 +48,12 @@ const schema = {
           target="_blank"
           class="btn btn-primary">Submit your talk proposals</a
         >
-      </section>
-      <!-- <section class="flex flex-col items-center gap-4">
-        <p class="text-center text-2xl font-bold">
-          Call for speakers is closed. Agenda coming soon!
-        </p>
       </section> -->
+      <section class="flex flex-col items-center gap-4">
+        <p class="text-center text-2xl font-bold">
+          Call for speakers is closed. More information coming soon!
+        </p>
+      </section>
 
       <!-- <ul
         class="flex flex-wrap justify-center gap-x-20 gap-y-8 mt-12 max-w-screen-lg m-auto"
