--- a/src/pages/en/speaker/[slug].astro
+++ b/src/pages/en/speaker/[slug].astro
@@ -47,7 +47,7 @@ const schema = {
       <span slot="description">{speaker.description}</span>
     </HeaderHero>
     <section class="max-w-screen-lg m-auto px-8">
-      <Tracks speakerSlug={slug} />
+      <Tracks title="Talks" speakerSlug={slug} />
     </section>
   </main>
 </Layout>
