--- a/src/pages/en/track/[slug].astro
+++ b/src/pages/en/track/[slug].astro
@@ -33,6 +33,6 @@ const schema = {
 
 <Layout title={SITE_TITLE} schema={schema}>
   <main>
-    <Track track={track} />
+    <Track title="Speakers" track={track} />
   </main>
 </Layout>
