--- a/src/components/Tracks.astro
+++ b/src/components/Tracks.astro
@@ -3,7 +3,7 @@ import { getCollection, type CollectionEntry } from "astro:content";
 import type { ITrack } from "../models/track.model";
 import { getRelativeLocaleUrl } from "astro:i18n";
 
-const { speakerSlug } = Astro.props;
+const { speakerSlug, title } = Astro.props;
 
 let tracks: Array<
   {
@@ -28,7 +28,7 @@ if (speakerSlug) {
 {
   tracks.length > 0 && (
     <div class="mt-8">
-      <h3 class="text-2xl font-bold mb-6 text-primary">Featured Talks</h3>
+      <h3 class="text-2xl font-bold mb-6 text-primary">{title}</h3>
       <div class="grid gap-4">
         {tracks.map((track) => (
           <a
