--- a/src/pages/fr/speaker/[slug].astro
+++ b/src/pages/fr/speaker/[slug].astro
@@ -40,7 +40,7 @@ const schema = {
       <span slot="description">{speaker.description}</span>
     </HeaderHero>
     <section class="max-w-screen-lg m-auto px-8">
-      <Tracks speakerSlug={slug} />
+      <Tracks title="Présentations" speakerSlug={slug} />
     </section>
   </main>
 </Layout>
